--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="#" class="github"><i class="bi bi-github"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/ian-clemence/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/ianclemence" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://instagram.com/iamchagga" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
 
     </div>
@@ -637,9 +637,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-              <a href="#" class="github"><i class="bi bi-github"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/ian-clemence/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/ianclemence" class="github"><i class="bi bi-github"></i></a>
+              <a href="https://instagram.com/iamchagga" class="instagram"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
         </div>
