--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
 
       <h1><a href="index.html">Ian Clemence</a></h1>
-        <h2>I'm A Passionate <span>Full-Stack Web Developer</span></h2>
+        <h2>I'm a <span>Full-Stack Web Developer</span> from Tanzania</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
