--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Checkout My Resume</p>
+        <p>Check My Resume</p>
       </div>
 
       <div class="row">
