--- a/neumorphism.html
+++ b/neumorphism.html
@@ -45,7 +45,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">Neumorphism In Forms</h2>
+              <h2 class="portfolio-title">Neumorphic Forms</h2>
 
               <div class="portfolio-details-slider swiper-container">
                 <div class="swiper-wrapper align-items-center">
@@ -92,10 +92,8 @@
               <p>
                 Neumorphic design is all based on box-shadow property. You just
                 need to remember two things:
-                <ul>
-                    <li>-Protrude effect in outer element (normal box-shadow)</li>
-                    <li>-Sunken effect in inner elements (Inset box-shadow)</li>
-                  </ul>
+                <li>Protrude effect in outer element (normal box-shadow)</li>
+                <li>Sunken effect in inner elements (Inset box-shadow)</li>
               </p>
             </div>
           </div>
